[package]
name = "tvid"
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["copi143 <copi143@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A terminal video player"
keywords = ["video", "player", "terminal"]
categories = ["command-line-utilities", "multimedia"]
homepage = "https://github.com/copi143/tvid"
repository = "https://github.com/copi143/tvid"
readme = "README.md"

[profile.dev]
debug = true
opt-level = 2

[profile.release]
debug = false
opt-level = 3
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "sync"] }
parking_lot = "0.12.5"
ffmpeg-sys-next = "8.0.1"
ffmpeg-next = "8.0.0"
cpal = "0.16.0"
unicode-width = "0.2.2"
chrono = "0.4.42"
base64 = "0.22.1"
jpeg-encoder = "0.6.1"
shellexpand = "3.1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "std",
  "winbase",
  "processenv",
  "winnt",
  "wincon",
  "consoleapi",
] }
