[package]
name = "tvid"
version = "0.1.0-beta.4"
edition = "2024"
authors = ["copi143 <copi143@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A terminal video player"
keywords = ["video", "player", "terminal"]
categories = ["command-line-utilities", "multimedia"]
homepage = "https://github.com/copi143/tvid"
repository = "https://github.com/copi143/tvid"
readme = "README.md"

[profile.dev]
debug = true
opt-level = 2

[profile.release]
debug = false
opt-level = 3
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[features]
default = ["ffmpeg", "i18n", "config", "audio", "video", "subtitle"]
ffmpeg = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
i18n = ["dep:sys-locale"]
sixel = []                                                           # WIP
osc1337 = ["dep:base64", "dep:jpeg-encoder"]
config = ["dep:serde", "dep:toml_edit"]
audio = ["dep:cpal"]
video = []
subtitle = []
ssh = ["dep:russh"]                                                  # WIP

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "sync"] }
parking_lot = "0.12.5"
ffmpeg-sys-next = { version = "8.0.1", optional = true }
ffmpeg-next = { version = "8.0.0", optional = true }
cpal = { version = "0.16.0", optional = true }
unicode-width = "0.2.2"
chrono = "0.4.42"
base64 = { version = "0.22.1", optional = true }
jpeg-encoder = { version = "0.6.1", optional = true }
shellexpand = "3.1.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }
toml_edit = { version = "0.23.7", features = ["serde"], optional = true }
clap = { version = "4.5.53", features = ["derive"] }
sys-locale = { version = "0.3.2", optional = true }
russh = { version = "0.55.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "std",
  "winbase",
  "processenv",
  "winnt",
  "wincon",
  "consoleapi",
] }
