[package]
name = "tvid"
version = "0.1.0-beta.7"
edition = "2024"
authors = ["copi143 <copi143@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A terminal video player"
keywords = ["video", "player", "terminal"]
categories = ["command-line-utilities", "multimedia"]
homepage = "https://github.com/copi143/tvid"
repository = "https://github.com/copi143/tvid"
readme = "README.md"

[profile.dev]
debug = true
opt-level = 2
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.release]
debug = false
opt-level = 3
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[features]
default = [
  "ffmpeg",
  "i18n",
  "config",
  "audio",
  "video",
  "subtitle",
  "unicode",
  "unifont",
]
ffmpeg = [
  "dep:ffmpeg-next",
  "dep:ffmpeg-sys-next",
] # 使用 ffmpeg 进行视频解码 (目前只支持这一个解码器)
i18n = ["dep:sys-locale"] # 支持多语言界面
sixel = [] # 支持 sixel 终端图像协议
osc1337 = ["dep:base64", "dep:jpeg-encoder"] # 支持 osc1337 终端图像协议
config = ["dep:serde", "dep:toml_edit"] # WIP
audio = ["dep:cpal"] # 支持音频播放
video = [] # 支持视频显示
subtitle = [] # 支持字幕渲染
unicode = ["dep:unicode-width"] # 支持渲染 Unicode 宽字符
unifont = [] # 在终端字体过小时使用盲文字符打印 Unifont 字体
ssh = ["dep:russh"] # WIP

[dependencies]
data-classes = { version = "0.0.0-17", features = ["serde"] }
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "sync"] }
parking_lot = "0.12.5"
ffmpeg-sys-next = { version = "8.0.1", optional = true }
ffmpeg-next = { version = "8.0.0", optional = true }
cpal = { version = "0.17.1", optional = true }
unicode-width = { version = "0.2.2", optional = true }
chrono = "0.4.42"
base64 = { version = "0.22.1", optional = true }
jpeg-encoder = { version = "0.6.1", optional = true }
shellexpand = "3.1.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }
toml_edit = { version = "0.24.0", features = ["serde"], optional = true }
clap = { version = "4.5.54", features = ["derive"] }
sys-locale = { version = "0.3.2", optional = true }
russh = { version = "0.56.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.179"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "std",
  "winbase",
  "processenv",
  "winnt",
  "wincon",
  "consoleapi",
] }
